assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@500&family=Playfair+Display&family=Raleway&display=swap');;

/* Global Styling */
* {
    margin: 0;
    padding: 0;
    border: none;
}

body {
    margin: 0;
}

/* Header */

header {
    background-color: #005EB8;
    letter-spacing: 1px;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-between;
    padding: 0 1rem;
}

header a {
    text-decoration: none;
}

nav {
    display: none;
}

nav ul {
    list-style: none;
    padding: 0;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    align-items: center;
    font-weight: 600;
}

nav li {
    margin-bottom: 1rem;
}

nav a {
    color: #fff;
    text-transform: uppercase;
    font-family: 'Playfair Display', serif;
}

#logo {
    font-family: 'Cinzel', serif;
    color: #fff;
}

.toggle-nav:checked ~ nav {
    display: block;
    position: absolute;
    top: 4.5rem;
    left: 0;
    width: 100%;
    background-color: #005EB8;
}

.toggle-nav {
    display: none;
}

.toggle-nav-label {
    color: #fff;
    font-size: 2rem;
}

/* Hero Image */

div.hero-image {
    background: url(../images/The_Battle_of_Culloden.jpg) no-repeat center center;
    background-size: cover;
    height: 50vh;
    width: 100%;
}

/* History Section */

#history {
    background-color: #fff;
}
.history-header {
    font-family: 'Playfair Display', serif;
    color: #009CFC;
    text-align: center;
    text-transform: uppercase;
    letter-spacing: 1px;
    font-size: 2rem;
    padding: 1rem;
    margin: 0;
}

.history-grid {
    display: grid;
    grid-auto-columns: 1fr;
    gap: 1rem;
    width: min(100%, 70rem);
    margin-inline: auto;
    justify-items: center;
    align-items: center;
}

.history-grid p {
    background-color: #009CFC;
    padding: 0.5rem;
    width: 75%;
    border-radius: 0.5rem;
    color: #fff;
    letter-spacing: 1px;
    font-family: 'Raleway', sans-serif;
    line-height: 1.25rem;
    text-align: left;
}    

.grid-span-1,
.grid-span-3,
.grid-span-5 {
    width: 77.5%;
    border-radius: 0.5rem;
    box-shadow: 5px 5px 5px rgb(77, 77, 77);
}

/* Visitor Centre Section */

#visitor-centre {
    background-color: #009CFC;
}

.visitor-centre-header {
    font-family: 'Playfair Display', serif;
    color: #fff;
    text-align: center;
    text-transform: uppercase;
    letter-spacing: 1px;
    font-size: 2rem;
    padding: 1rem;
    margin: 0;
}

.visitor-centre-subheader {
    font-family: 'Playfair Display', serif;
    color: #fff;
    text-align: center;
    text-transform: uppercase;
    letter-spacing: 1px;
    font-size: 2rem;
    padding: 0 0 1rem;
    font-size: 24px;
    margin: 0;
}

.museum-grid {
    display: grid;
    grid-auto-columns: 1fr;
    gap: 1rem;
    width: min(100%, 70rem);
    margin-inline: auto;
    justify-items: center;
    align-items: center;
}

.brodie-sword {
    width: 200px;
    height: 200px;
    padding: 0;
    border-style: solid;
    border-color: #fff;
    border-radius: 50%;
    margin: 0 auto;
}

.blunderbuss {
    width: 200px;
    height: 200px;
    padding: 0;
    border-style: solid;
    border-color: #fff;
    border-radius: 50%;
    margin: 0 auto;
}

.museum-grid p {
    background-color: #fff;
    padding: 0.5rem;
    width: 75%;
    border-radius: 0.5rem;
    color: #009CFC;
    letter-spacing: 1px;
    font-family: 'Raleway', sans-serif;
    line-height: 1.25rem;
    text-align: left;
}    

.opening-times {
    display: flex;
    justify-content: center;

}

.opening-times table {
    border-collapse: collapse;
    background-color: #fff;
    padding: 0.25rem;
    width: 400px;
    border-style: solid;
    border-color: #005EB8;
    color: #009CFC;
    letter-spacing: 1px;
    font-family: 'Raleway', sans-serif;
    line-height: 1.25rem;
    text-align: left;
    margin-bottom: 1rem;
}

.opening-times th, td {
    padding: 0.5rem;
    border: 1px solid #005EB8;
    text-align: center;
}

.cafe-flex {
    display: flex;
    flex-direction: column;
    padding: 0;
    justify-items: center;
    align-items: center;
}
.cafe-menu {
    background-color: #fff;
    width: 394px;
    border-style: solid;
    border-color: #005EB8;
    color: #009CFC;
    letter-spacing: 1px;
    font-family: 'Raleway', sans-serif;
    line-height: 1.25rem;
    text-align: center;
    list-style: none;
    padding: 0;
    margin: 0;
}

.cafe-menu li {
    padding: 0.5rem 0;
}
.cafe-opening-times {
    border-collapse: collapse;
    background-color: #fff;
    width: 400px;
    border-style: solid;
    border-color: #005EB8;
    color: #009CFC;
    letter-spacing: 1px;
    font-family: 'Raleway', sans-serif;
    line-height: 1.25rem;
    text-align: center;
    margin: 1rem 0;
}

.cafe-opening-times th, td {
    padding: 0.5rem;
    border: 1px solid #005EB8;
    text-align: center;
}

.battlefield-flex {
    display: flex;
    flex-direction: column;
    justify-items: center;
    align-items: center;
    row-gap: 1rem;
}

.leanach-cottage {
    width: 80%;
    border-radius: 0.5rem;
    box-shadow: 5px 5px 5px rgb(77, 77, 77);
}

.battlefield-flex p {
    background-color: #fff;
    padding: 0.5rem;
    width: 75%;
    border-radius: 0.5rem;
    color: #009CFC;
    letter-spacing: 1px;
    font-family: 'Raleway', sans-serif;
    line-height: 1.25rem;
    text-align: left;
    margin-bottom: 1rem;
}   

/* Contact Information Section */

#contact {
    background-color: #fff;
}

.contact-header {
    font-family: 'Playfair Display', serif;
    color: #009CFC;
    text-align: center;
    text-transform: uppercase;
    letter-spacing: 1px;
    font-size: 2rem;
    padding: 1rem;
    margin: 0;
}

.contact-grid {
    display: grid;
    grid-auto-columns: 1fr;
    gap: 0.25rem;
    width: min(100%, 70rem);
    margin-inline: auto;
    justify-items: center;
    align-items: center;
}

.contact-subheader {
    font-family: 'Playfair Display', serif;
    color: #009CFC;
    text-align: center;
    text-transform: uppercase;
    letter-spacing: 1px;
    font-size: 2rem;
    padding: 0.5rem;
    font-size: 24px;
    margin: 0;
}

.contact-grid p {
    background-color: #009CFC;
    padding: 0.5rem;
    width: 45%;
    border-radius: 0.5rem;
    color: #fff;
    letter-spacing: 1px;
    font-family: 'Raleway', sans-serif;
    line-height: 1.25rem;
    text-align: center;
    margin: 0;
}

.contact-grid iframe {
    width: 95%;
    height: 200px;
    border: 3px solid #005EB8;
    margin: 1rem 0;
}

/* Tour section */

#tours {
    background-color: #009CFC;
}

.tour-header {
    font-family: 'Playfair Display', serif;
    color: #fff;
    text-align: center;
    text-transform: uppercase;
    letter-spacing: 1px;
    font-size: 2rem;
    padding: 1rem;
    margin: 0;
}

.tour-grid {
    display: grid;
    grid-auto-columns: 1fr;
    gap: 0.25rem;
    width: min(100%, 70rem);
    margin-inline: auto;
    justify-items: center;
    align-items: center;
}

.tour-grid p {
    background-color: #fff;
    padding: 0.5rem;
    width: 80%;
    border-radius: 0.5rem;
    color: #009CFC;
    letter-spacing: 1px;
    font-family: 'Raleway', sans-serif;
    line-height: 1.25rem;
    text-align: left;
    margin: 0;
}

.tour-pricing-table {
    border-collapse: collapse;
    background-color: #fff;
    width: 250px;
    border-style: solid;
    border-color: #005EB8;
    color: #009CFC;
    letter-spacing: 1px;
    font-family: 'Raleway', sans-serif;
    line-height: 1.25rem;
    text-align: center;
    margin: 1rem 0;
}

.tour-pricing-table th, td {
    padding: 0.5rem;
    border: 1px solid #005EB8;
    text-align: center;
}

.book-tour-form {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    background-color: rgba(44, 48, 46, 0.5);
    padding: 2rem;
    width: 80%;
    border-radius: 0.5rem;
    margin-bottom: 1rem;
    box-shadow: 5px 5px 5px rgb(77, 77, 77);
}

.book-tour-form label {
    color: #fff;
    font-family: 'raleway', sans-serif;
    letter-spacing: 1px;
    font-weight: 600;
}

.book-tour-form .form-button {
    width: 40%;
}

.book-tour-form #group-size {
    width: 10%;
}

.book-tour-form #date {
    width: 22%;
}

/* Footer */

footer {
    background-color: #005EB8;
    display: flex;
    color: #fff;
    flex-direction: row;
    padding: 1rem;
}

.social-networks {
    display: flex;
    flex-direction: row;
    width: 100%;
    flex-wrap: wrap;
    justify-content: space-between;
    align-content: space-evenly;
    list-style: none;
    padding: 0;
    margin: 0;
}

.social-networks a {
    color: #fff;
    font-size: 2rem;
}

